--- a/scss/globals/_boilerplate.scss
+++ b/scss/globals/_boilerplate.scss
@@ -9,6 +9,8 @@ html {
 *::before, 
 *::after {
 	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
 }
 
 ul {
@@ -16,7 +18,7 @@ ul {
 }
 
 body {
-	margin: 0;
-	padding: 0;
+	min-height: 100vh;
 	font-family: u.$font;
+	background-color: var(--bg);
 }
